@@ -1505,6 +1505,8 @@
 2490,3000,0,,00,10000:12000:14000:18000:20000,0
 //-- GN_HELLS_PLANT_ATK
 2491,0,0,0,0,6000,16000
+//-- GN_MANDRAGORA
+2492,1000,0,0,0,30000,0
 //==========================================
 
 //==== Sorcerer skills =====================
