@@ -472,11 +472,11 @@ void initChangeTables(void)
 	set_sc( SC_INVISIBILITY      , SC__INVISIBILITY      , SI_INVISIBILITY      , SCB_ASPD|SCB_CRI|SCB_ATK_ELE );
 	set_sc( SC_DEADLYINFECT      , SC__DEADLYINFECT      , SI_DEADLYINFECT      , SCB_NONE );
 	set_sc( SC_ENERVATION        , SC__ENERVATION        , SI_ENERVATION        , SCB_BATK  );
-	set_sc( SC_GROOMY            , SC__GROOMY            , SI_GROOMY        , SCB_ASPD|SCB_HIT|SCB_SPEED );
-	set_sc( SC_IGNORANCE         , SC__IGNORANCE         , SI_IGNORANCE        , SCB_NONE );
-	set_sc( SC_LAZINESS          , SC__LAZINESS          , SI_LAZINESS        , SCB_FLEE );
-	set_sc( SC_UNLUCKY           , SC__UNLUCKY           , SI_UNLUCKY        , SCB_CRI|SCB_FLEE2 );
-	set_sc( SC_WEAKNESS          , SC__WEAKNESS          , SI_WEAKNESS        , SCB_FLEE2|SCB_MAXHP );
+	set_sc( SC_GROOMY            , SC__GROOMY            , SI_GROOMY            , SCB_ASPD|SCB_HIT|SCB_SPEED );
+	set_sc( SC_IGNORANCE         , SC__IGNORANCE         , SI_IGNORANCE         , SCB_NONE );
+	set_sc( SC_LAZINESS          , SC__LAZINESS          , SI_LAZINESS          , SCB_FLEE );
+	set_sc( SC_UNLUCKY           , SC__UNLUCKY           , SI_UNLUCKY           , SCB_CRI|SCB_FLEE2 );
+	set_sc( SC_WEAKNESS          , SC__WEAKNESS          , SI_WEAKNESS          , SCB_FLEE2|SCB_MAXHP );
 	set_sc( SC_STRIPACCESSARY    , SC__STRIPACCESSORY    , SI_STRIPACCESSORY    , SCB_DEX|SCB_INT|SCB_LUK );
 	set_sc( SC_MANHOLE           , SC__MANHOLE           , SI_MANHOLE           , SCB_NONE );
 	add_sc( SC_CHAOSPANIC        , SC_CHAOS );
@@ -488,32 +488,32 @@ void initChangeTables(void)
 	set_sc( LG_PRESTIGE          , SC_PRESTIGE           , SI_PRESTIGE          , SCB_DEF2 );
 	set_sc( LG_PIETY             , SC_BENEDICTIO         , SI_BENEDICTIO        , SCB_DEF_ELE );
 	
-	set_sc( WA_SWING_DANCE       , SC_SWINGDANCE         , SI_SWINGDANCE        , SCB_SPEED|SCB_ASPD );
-	set_sc( WA_SYMPHONY_OF_LOVER , SC_SYMPHONYOFLOVER    , SI_SYMPHONYOFLOVERS  , SCB_MDEF );
-	set_sc( WA_MOONLIT_SERENADE  , SC_MOONLITSERENADE    , SI_MOONLITSERENADE   , SCB_MATK );
-	set_sc( MI_RUSH_WINDMILL     , SC_RUSHWINDMILL       , SI_RUSHWINDMILL      , SCB_BATK  );
-	set_sc( MI_ECHOSONG          , SC_ECHOSONG           , SI_ECHOSONG          , SCB_DEF2  );
-	set_sc( MI_HARMONIZE         , SC_HARMONIZE          , SI_HARMONIZE         , SCB_STR|SCB_AGI|SCB_VIT|SCB_INT|SCB_DEX|SCB_LUK );
-	set_sc( WM_POEMOFNETHERWORLD , SC_STOP               , SI_NETHERWORLD       , SCB_NONE );
-	set_sc( WM_VOICEOFSIREN      , SC_VOICEOFSIREN       , SI_VOICEOFSIREN      , SCB_NONE );
-	set_sc( WM_LULLABY_DEEPSLEEP , SC_DEEPSLEEP          , SI_DEEPSLEEP         , SCB_NONE );
-	set_sc( WM_SIRCLEOFNATURE    , SC_SIRCLEOFNATURE     , SI_SIRCLEOFNATURE    , SCB_NONE );
-	set_sc( WM_GLOOMYDAY         , SC_GLOOMYDAY          , SI_GLOOMYDAY         , SCB_FLEE|SCB_ASPD );
-	set_sc( WM_SONG_OF_MANA      , SC_SONGOFMANA         , SI_SONGOFMANA        , SCB_NONE );
-	set_sc( WM_DANCE_WITH_WUG    , SC_DANCEWITHWUG       , SI_DANCEWITHWUG      , SCB_ASPD );
-	set_sc( WM_SATURDAY_NIGHT_FEVER, SC_SATURDAYNIGHTFEVER       , SI_SATURDAYNIGHTFEVER           , SCB_DEF|SCB_DEF2|SCB_MDEF|SCB_MDEF2|SCB_FLEE|SCB_SPEED|SCB_ASPD|SCB_MAXHP|SCB_REGEN );
-	set_sc( WM_LERADS_DEW        , SC_LERADSDEW          , SI_LERADSDEW         , SCB_MAXHP );
-	set_sc( WM_MELODYOFSINK      , SC_MELODYOFSINK       , SI_MELODYOFSINK      , SCB_MATK|SCB_DEF2 );
-	set_sc( WM_BEYOND_OF_WARCRY  , SC_BEYONDOFWARCRY     , SI_WARCRYOFBEYOND    , SCB_BATK|SCB_MATK );
-	set_sc( WM_UNLIMITED_HUMMING_VOICE , SC_UNLIMITEDHUMMINGVOICE, SI_UNLIMITEDHUMMINGVOICE , SCB_NONE );
+	set_sc( WA_SWING_DANCE                , SC_SWINGDANCE              , SI_SWINGDANCE                , SCB_SPEED|SCB_ASPD );
+	set_sc( WA_SYMPHONY_OF_LOVER          , SC_SYMPHONYOFLOVER         , SI_SYMPHONYOFLOVERS          , SCB_MDEF );
+	set_sc( WA_MOONLIT_SERENADE           , SC_MOONLITSERENADE         , SI_MOONLITSERENADE           , SCB_MATK );
+	set_sc( MI_RUSH_WINDMILL              , SC_RUSHWINDMILL            , SI_RUSHWINDMILL              , SCB_BATK  );
+	set_sc( MI_ECHOSONG                   , SC_ECHOSONG                , SI_ECHOSONG                  , SCB_DEF2  );
+	set_sc( MI_HARMONIZE                  , SC_HARMONIZE               , SI_HARMONIZE                 , SCB_STR|SCB_AGI|SCB_VIT|SCB_INT|SCB_DEX|SCB_LUK );
+	set_sc( WM_POEMOFNETHERWORLD          , SC_STOP                    , SI_NETHERWORLD               , SCB_NONE );
+	set_sc( WM_VOICEOFSIREN               , SC_VOICEOFSIREN            , SI_VOICEOFSIREN              , SCB_NONE );
+	set_sc( WM_LULLABY_DEEPSLEEP          , SC_DEEPSLEEP               , SI_DEEPSLEEP                 , SCB_NONE );
+	set_sc( WM_SIRCLEOFNATURE             , SC_SIRCLEOFNATURE          , SI_SIRCLEOFNATURE            , SCB_NONE );
+	set_sc( WM_GLOOMYDAY                  , SC_GLOOMYDAY               , SI_GLOOMYDAY                 , SCB_FLEE|SCB_ASPD );
+	set_sc( WM_SONG_OF_MANA               , SC_SONGOFMANA              , SI_SONGOFMANA                , SCB_NONE );
+	set_sc( WM_DANCE_WITH_WUG             , SC_DANCEWITHWUG            , SI_DANCEWITHWUG              , SCB_ASPD );
+	set_sc( WM_SATURDAY_NIGHT_FEVER       , SC_SATURDAYNIGHTFEVER      , SI_SATURDAYNIGHTFEVER        , SCB_DEF|SCB_DEF2|SCB_MDEF|SCB_MDEF2|SCB_FLEE|SCB_SPEED|SCB_ASPD|SCB_MAXHP|SCB_REGEN );
+	set_sc( WM_LERADS_DEW                 , SC_LERADSDEW               , SI_LERADSDEW                 , SCB_MAXHP );
+	set_sc( WM_MELODYOFSINK               , SC_MELODYOFSINK            , SI_MELODYOFSINK              , SCB_MATK|SCB_DEF2 );
+	set_sc( WM_BEYOND_OF_WARCRY           , SC_BEYONDOFWARCRY          , SI_WARCRYOFBEYOND            , SCB_BATK|SCB_MATK );
+	set_sc( WM_UNLIMITED_HUMMING_VOICE    , SC_UNLIMITEDHUMMINGVOICE   , SI_UNLIMITEDHUMMINGVOICE     , SCB_NONE );
 
-	set_sc( GN_CARTBOOST         , SC_GN_CARTBOOST    , SI_CARTSBOOST      , SCB_SPEED|SCB_BATK );
-	set_sc( GN_THORNS_TRAP       , SC_THORNSTRAP      , SI_THORNTRAP       , SCB_NONE );
-	set_sc( GN_BLOOD_SUCKER      , SC_BLOODSUCKER     , SI_BLOODSUCKER     , SCB_NONE );
-	set_sc( GN_WALLOFTHORN       , SC_STOP            , SI_BLANK     , SCB_NONE );
-	set_sc( GN_FIRE_EXPANSION_SMOKE_POWDER  , SC_SMOKEPOWDER   , SI_FIRE_EXPANSION_SMOKE_POWDER , SCB_NONE );
-	set_sc( GN_FIRE_EXPANSION_TEAR_GAS      , SC_TEARGAS       , SI_FIRE_EXPANSION_TEAR_GAS     , SCB_NONE );
-	set_sc( GN_MANDRAGORA        , SC_MANDRAGORA      , SI_BLANK           , SCB_INT );
+	set_sc( GN_CARTBOOST                   , SC_GN_CARTBOOST    , SI_CARTSBOOST                  , SCB_SPEED|SCB_BATK );
+	set_sc( GN_THORNS_TRAP                 , SC_THORNSTRAP      , SI_THORNTRAP                   , SCB_NONE );
+	set_sc( GN_BLOOD_SUCKER                , SC_BLOODSUCKER     , SI_BLOODSUCKER                 , SCB_NONE );
+	set_sc( GN_WALLOFTHORN                 , SC_STOP            , SI_BLANK                       , SCB_NONE );
+	set_sc( GN_FIRE_EXPANSION_SMOKE_POWDER , SC_SMOKEPOWDER     , SI_FIRE_EXPANSION_SMOKE_POWDER , SCB_NONE );
+	set_sc( GN_FIRE_EXPANSION_TEAR_GAS     , SC_TEARGAS         , SI_FIRE_EXPANSION_TEAR_GAS     , SCB_NONE );
+	set_sc( GN_MANDRAGORA                  , SC_MANDRAGORA      , SI_MANDRAGORA                  , SCB_INT );
 
 	add_sc( SO_FIREWALK          , SC_FIREWALK );
 	add_sc( SO_ELECTRICWALK      , SC_ELECTRICWALK );
