@@ -933,7 +933,7 @@ enum si_type {
 	SI_FIRE_EXPANSION_SMOKE_POWDER = 467,
 	SI_FIRE_EXPANSION_TEAR_GAS = 468,
 //	SI_BLOCKING_PLAY = 469,
-//	SI_MANDRAGORA = 470,
+	SI_MANDRAGORA = 470,
 //	SI_ACTIVATE = 471,
 	SI_SECRAMENT = 472,
 //	SI_ASSUMPTIO_2 = 473,
