@@ -5,7 +5,10 @@
 // 	- Details.
 //========================================
 
-04/07/2010
+04/08/2010
+	r313 [Jobbie]
+	* Added GN_MANDRAGORA skill.
+
 	r312 [pakpil]
 	* Fixed WM_GLOOMYDAY. Added missing skill data.
 	* Fixed LG_REFLECTDAMAGE area effect. Follow up r304.
@@ -13,6 +16,7 @@
 	- Fixed its unit layout.
 	- Fixed behavior using clif_changetraplook instead skill_unitsetting.
 
+04/07/2010
 	r311 [Jobbie]
 	* Fix minor bug in battle.c
 
